# Alkene_Ozone_Predict

./: Predict_New.ipynb  Predict_New.py  RunInColab.ipynb  run
DFTStructureGenerator/: DFT_handle.py  FormatConverter.py  Kwon.py  Tool.py  logfile_process.py  mol_manipulation.py  xtb_process.py
confrankplus/: Load_Data.ipynb  MANIFEST.in  README.md  Train.ipynb  predict.py  pyproject.toml  train.py  train_example.py
confrankplus/ConfRankPlus/data/: dataset.py
confrankplus/ConfRankPlus/inference/: calculator.py  loading.py  radius_graph.py
confrankplus/ConfRankPlus/inference/pretrained/: 2025_05_confrankplus.pt
confrankplus/ConfRankPlus/model/: __init__.py  atomic_data.py  base.py  charge_model.py  eeq.py  layers.py  model.py  reference_energy.py  repulsion.py
confrankplus/ConfRankPlus/model/tad/: atoms.py  pairs.py
confrankplus/ConfRankPlus/parameters/: README.md  gfn1-xtb.json  gfn2-xtb.json
confrankplus/ConfRankPlus/scripts/: eval.py
confrankplus/ConfRankPlus/training/: lightning.py
confrankplus/ConfRankPlus/util/: elements.py  scatter.py
confrankplus/evaluate/: README.md  inference_on_all_testsets.sh
confrankplus/evaluate/scripts/: get_stats.py  xyz_to_csv.py
confrankplus/lightning_logs/version_0/: events.out.tfevents.1764933906.hxgpu4-TRX40-AORUS-XTREME.288232.0  events.out.tfevents.1764937529.hxgpu4-TRX40-AORUS-XTREME.288232.1
confrankplus/lightning_logs/version_1/: events.out.tfevents.1764937599.hxgpu4-TRX40-AORUS-XTREME.288232.2
confrankplus/lightning_logs/version_2/: events.out.tfevents.1764937616.hxgpu4-TRX40-AORUS-XTREME.288232.3
(+64 files in other folders)
